practicing making changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Miz and Armaan 
+description: Keeping track of chores and other items associated with being room mates 
